# cpar

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  files.rs  main.rs
