[package]
name = "cpar"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your@email.com>"]
license = "MIT OR Apache-2.0"
description = "A commmand line utility that allows for batch coping & renaming with globs."
readme = "README.md"
homepage = "https://github.com/alligatorjazz/cpar"
repository = "https://github.com/alligatorjazz/cpar"
keywords = ["cli", "search", "demo", "cp", "mv", "copy", "rename"]
categories = ["command-line-utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.24", features = ["derive"] }
glob = "0.3.0"
